cambio en direccion de una imagen de foto de perfil

--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Actualizacion de perfil usuario/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Actualizacion de perfil usuario/index.html
@@ -10,7 +10,8 @@
     <div class="form-container">
         <div class="form-container__wrapper">
             <div class="form-container__photo-section">
-                <img src="/img/foto perfil.jpg" alt="Foto de la Persona" class="form-container__profile-photo">
+                <!-- <img src="/img/foto perfil.jpg" alt="Foto de la Persona" class="form-container__profile-photo"> -->
+                <img src="/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/img/foto perfil.jpg" alt="Foto de la Persona" class="form-container__profile-photo">
             </div>
 
             <div class="form-container__form-section">
