--- a/Lembo/Homes/INDEX/home-insumos.html
+++ b/Lembo/Homes/INDEX/home-insumos.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Insumos</title>
     <link rel="stylesheet" href="../CSS/stylieshome-insumos-sensores.css">
-    <script src="/fecth/js/grid.js"></script>
+    <script src="/Lembo/fecth/js/grid.js"></script>
+
 
 </head>
 <body>
 
     <!-- Header -->
     <header class="header">
-        <img src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+    
         <nav class="header__nav">
             <a href="#" class="header__link">Inicio</a>
             <a href="#" class="header__link">Cultivos</a>
