--- a/Lembo/Homes/INDEX/index.html
+++ b/Lembo/Homes/INDEX/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto SENA</title>
-    <link rel="stylesheet" href="../CSS/stilyesindex.css">
-    <script src="/fecth/js/grid.js"></script>
+    <link rel="stylesheet" href="../CSS/stylieshome-insumos-sensores.css">
+    <script src="/Lembo/fecth/js/grid.js"></script>
+    
 
 </head>
 <body>
     <!-- Encabezado -->
     <header class="header">
-        <img src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <a href="#" class="header__link">Registrar usuario</a>
             <a href="#" class="header__link">Insumos</a>
