--- a/Lembo/Homes/INDEX/home-ciclo.html
+++ b/Lembo/Homes/INDEX/home-ciclo.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home ciclo cultivo</title>
     <link rel="stylesheet" href="../CSS/stilyciclo.css">
-    <script src="/fecth/js/grid.js"></script>
+    <script src="/Lembo/fecth/js/grid.js"></script>
+    
 </head>
 <body>
     <header class="header">
-        <img class="header__logo" src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA">
+        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <a class="header__link" href="#">Inicio</a>
             <a class="header__link" href="#">Insumos</a>
