--- a/Lembo/Homes/INDEX/home-cultivo-3.html
+++ b/Lembo/Homes/INDEX/home-cultivo-3.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home cultivo</title>
     <link rel="stylesheet" href="../CSS/stylieshome-cultivo.css">
-    <script src="/fecth/js/grid.js"></script>
+    <script src="/Lembo/fecth/js/grid.js"></script>
+    
 </head>
 <body>
 
     <header class="header">
-        <img class="header__logo" src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA">
+        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <h2 class="header__title">SGL</h2>
             <a class="header__link" href="#">Ciclo cultivo</a>
