--- a/Lembo/Homes/INDEX/home-sensores.html
+++ b/Lembo/Homes/INDEX/home-sensores.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Ciclo Cultivo</title>
+    <title>Home Sensores</title>
     <link rel="stylesheet" href="../CSS/stylieshome-insumos-sensores.css">
-    <script src="/fecth/js/grid.js"></script>
+    <script src="/Lembo/fecth/js/grid.js"></script>
 
 </head>
 <body>
     <header class="header">
-        <img src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
+        <!-- <img src="/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo"> -->
+        <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <a href="#" class="header__link">Inicio</a>
             <a href="#" class="header__link">Insumos</a>
