Crear contenedor para el manejo individual de los botones

--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Cambiar contraseña/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Cambiar contraseña/index.html
@@ -22,8 +22,12 @@
             <h3 class="password-form__subtitle">Confirmar la nueva contraseña</h3>
             <input id="confirmPassword" class="password-form__input password-form__input--password" type="password" placeholder="Confirma la contraseña">
             <p id="message" class="password-form__message"></p>
-            <button type="submit" class="password-form__button password-form__button--confirm">Confirmar</button>
-            <a href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Recuperar contraseña/index.html" class="password-form__link password-form__link--back">Volver</a>
+            
+            <!-- Contenedor de los botones -->
+            <div class="password-form__buttons-container">
+                <button type="submit" class="password-form__button password-form__button--confirm">Confirmar</button>
+                <a href="../Recuperar contraseña/index.html" class="password-form__link password-form__link--back">Volver</a>
+            </div>
         </form>
     </main>
     
