--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Solicitud actualizacion de usuarios/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Solicitud actualizacion de usuarios/index.html
@@ -18,7 +18,7 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="main">+
         <div class="main__overlay">
             <h3 class="main__text">Para el ingreso de la actualización de datos, se solicitará el ID de la persona</h3>
             <div class="form">
