Redireccion del boton volver

--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Codigo de recuperacion contraseña/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Codigo de recuperacion contraseña/index.html
@@ -36,7 +36,8 @@
         </form>
 
         <div class="container__buttons">
-            <a href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Recuperar contraseña/index.html" class="container__link">
+            <!-- <a href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Recuperar contraseña/index.html" class="container__link"> -->
+            <a href="/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Recuperar contraseña/index.html" class="container__link">
                 <button class="btn btn--back">Volver</button>
             </a>      
         </div>
