--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/index.html
@@ -43,7 +43,7 @@
         
         <div class="form__group">
             <label for="numeroDocumento">Número del Documento</label>
-            <input type="text" id="numeroDocumento" name="numeroDocumento" class="form__input">
+            <input type="text" id="numeroDocumento" name="numeroDocumento" class="form__input form__input--id" required>
         </div>
         
         <div class="form__group">
