Se agrego un link para redirigir al boton de volver

--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Imprimir usuarios Mensaje/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Imprimir usuarios Mensaje/index.html
@@ -18,7 +18,7 @@
         <div class="success-message">
             <h2 class="success-message__title">Tu archivo se ha imprimido exitosamente</h2>
             <button type="button" class="success-message__button">
-                <h4 class="success-message__button-text">Volver</h4>
+                <h4 class="success-message__button-text"><a href="/Lembo/Homes/INDEX/index.html">Volver</a></h4>
             </button>
         </div>
     </main>
