--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Listar usuarios/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Listar usuarios/index.html
@@ -37,7 +37,8 @@
             </table>
 
             <div class="table-container__button-container">
-                <a href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Imprimir usuarios Mensaje/index.html" class="table-container__button-container-link">
+                <!-- <a href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Imprimir usuarios Mensaje/index.html" class="table-container__button-container-link"> -->
+                <a href="/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Imprimir usuarios Mensaje/index.html" class="table-container__button-container-link">
                     <button class="btn btn-print">Imprimir</button>
                 </a>
             </div>
