cambio de redireccion de enlance

--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Recuperacion exitosa de contraseña/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Recuperacion exitosa de contraseña/index.html
@@ -17,7 +17,8 @@
     <main class="main">
         <div class="message">
             <h3 class="message__title">Tu contraseña ha sido cambiada exitosamente</h3>
-            <a class="message__link" href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Inicio sesion/index.html">
+            <!-- <a class="message__link" href="/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Inicio sesion/index.html"> -->
+            <a class="message__link" href="/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Inicio sesion/index.html">
                 <button class="message__button" type="button">
                     <h4 class="message__button-text">Iniciar Sesión</h4>
                 </button>
