--- a/Lembo/Homes/INDEX/home-ciclo.html
+++ b/Lembo/Homes/INDEX/home-ciclo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home ciclo cultivo</title>
-    <link rel="stylesheet" href="../CSS/stilyciclo.css">
+    <link rel="stylesheet" href="../CSS/stylieshome-insumos-sensores.css">
     <script src="/Lembo/fecth/js/grid.js"></script>
     
 </head>
