--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/index.html
@@ -79,7 +79,7 @@
         </div>
     </form> 
 </main>
-
+<!-- script -->
 <script src="script.js"></script> <!-- Enlace al archivo JS -->
 </body>
 </html>
