--- a/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/index.html
+++ b/Lembo/Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/index.html
@@ -64,7 +64,17 @@
         
         <div class="form__group">
             <label for="telefono">Número de Teléfono</label>
-            <input type="tel" id="telefono" name="telefono" class="form__input .form__input--phone">
+            <input type="tel" id="telefono" name="telefono" class="form__input form__input--phone">
+        </div>
+         
+        <div class="form__group">
+            <label for="Contraseña">Contraseña</label>
+            <input type="password" id="contraseña" name="contraseña" class="form__input form__input--password">
+        </div>
+
+        <div class="form__group">
+            <label for="confirmarContraseña">Confirmar Contraseña</label>
+            <input type="password" id="confirmarContraseña" name="confirmarCo" class="form__input form__input--password">
         </div>
 
         <!-- Aquí aparecerá el mensaje de validación -->
