--- a/Lembo/fecth/grid.html
+++ b/Lembo/fecth/grid.html
@@ -7,11 +7,11 @@
     <!-- Segundo cuadro -->
     <div class="grid__item">
         <!-- <div class="grid__text grid__text--second">Texto debajo del segundo cuadro</div> -->
-        <img class="grid__image" src="/Lembo/imagenes proyecto/1-1-jpg.webp" alt="Imagen 1">
+        <img class="grid__image" src="/Lembo/imagenes proyecto/Cultivos.jpg" alt="Imagen 1">
     </div>
     <!-- Tercer cuadro -->
     <div class="grid__item">
         <!-- <div class="grid__text grid__text--third">Texto sobre el tercer cuadro</div> -->
-        <img class="grid__image" src="/Lembo/imagenes proyecto/1-1-jpg.webp" alt="Imagen 1">
+        <img class="grid__image" src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Imagen 1">
     </div>
 </div>
