--- a/Lembo/Homes/INDEX/home-cultivo-3.html
+++ b/Lembo/Homes/INDEX/home-cultivo-3.html
@@ -14,23 +14,23 @@
         <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
             <h2 class="header__title">SGL</h2>
-            <a class="header__link" href="#">Ciclo cultivo</a>
-            <a class="header__link" href="#">Insumos</a>
-            <a class="header__link" href="#">Sensores</a>
-            <a class="header__link" href="#">Inicio</a>
+            <a class="header__link" href="home-ciclo.html">Ciclo cultivo</a>
+            <a class="header__link" href="home-insumos.html">Insumos</a>
+            <a class="header__link" href="home-sensores.html">Sensores</a>
+            <a class="header__link" href="index.html">Inicio</a>
         </nav>
     </header>
 
     <div class="background">
         <div class="top-boxes">
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Crear cultivo</p>
+                <a href="../../Cultivo/INDEX/crear_cultivo.html" class="top-boxes__text">Crear cultivo</a>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Visualizar cultivo</p>
+                <a href="../../Cultivo/INDEX/datos_cultivo.html" class="top-boxes__text">Visualizar cultivo</a>
             </div>
             <div class="top-boxes__item">
-                <p class="top-boxes__text">Listar cultivo</p>
+                <a href="#" class="top-boxes__text">Listar cultivo</a>
             </div>
         </div>
 
