--- a/Lembo/Homes/INDEX/index.html
+++ b/Lembo/Homes/INDEX/index.html
@@ -14,11 +14,8 @@
     <header class="header">
         <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo">
         <nav class="header__nav">
-            <a href="#" class="header__link">Registrar usuario</a>
-            <a href="#" class="header__link">Insumos</a>
-            <a href="#" class="header__link">Actualizar sensores</a>
-            <a href="#" class="header__link">Sensores</a>
-            <a href="#" class="header__link">Listar usuarios</a>
+            <a href="../../Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Registrar usuarios/index.html" class="header__link">Registrar usuario</a>
+            <a href="../../Usuarios-lembo-20250311T040238Z-001/Usuarios-lembo/Listar usuarios/index.html" class="header__link">Listar usuarios</a>
         </nav>
     </header>
 
@@ -26,9 +23,9 @@
     <div class="background">
         <!-- Botones superiores -->
         <div class="top-boxes">
-            <div class="top-boxes__item"><p>Sensores</p></div>
-            <div class="top-boxes__item"><p>Insumos</p></div>
-            <div class="top-boxes__item"><p>Cultivos</p></div>
+            <div class="top-boxes__item"><a href="home-sensores.html">Sensores</a></div>
+            <div class="top-boxes__item"><a href="home-insumos.html">Insumos</a></div>
+            <div class="top-boxes__item"><a href="home-cultivo-3.html">Cultivo</a></div>
         </div>
 
         <!-- Contenedor de cuadros -->
