--- a/Lembo/Insumos/INDEX/listar_insumos.html
+++ b/Lembo/Insumos/INDEX/listar_insumos.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Listar usuarios</title>
+<title>Listar insumos</title>
 <link rel="stylesheet" href="/Lembo/Ciclo de Cultivo/CSS/style_listar_ciclo.css">
 
 </head>
