--- a/Lembo/Cultivo/INDEX/crear_cultivo.html
+++ b/Lembo/Cultivo/INDEX/crear_cultivo.html
@@ -77,6 +77,6 @@
         </div>
     </main>
 
-    <!-- <script src="../JS/validacion_datos.js"></script> -->
+    <script src="../JS/validacion_datos.js"></script>
 </body>
 </html>
