--- a/Lembo/Homes/INDEX/practica.html
+++ b/Lembo/Homes/INDEX/practica.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crops Presentation</title>
+    <title>Presentación de Cultivos</title>
     <link rel="stylesheet" href="/Lembo/Homes/CSS/styleprac.css">
 </head>
-<body class="page">
-    <header class="header">
-        <div class="header__logo">
-            <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="header__logo-image">
+<body class="pagina">
+    <header class="cabecera">
+        <div class="cabecera__logo">
+            <img src="/Lembo/imagenes proyecto/loso_SENA.png" alt="Logo SENA" class="cabecera__logo-img">
         </div>
-        <nav class="header__nav">
-            <a href="#" class="header__link">Inicio</a>
-            <a href="#" class="header__link">Presentaciones</a>
-            <a href="#" class="header__link">Templates</a>
-            <a href="#" class="header__link">Contacto</a>
+        <nav class="cabecera__nav">
+            <a href="#" class="cabecera__enlace">Inicio</a>
+            <a href="#" class="cabecera__enlace">Presentaciones</a>
+            <a href="#" class="cabecera__enlace">Plantillas</a>
+            <a href="#" class="cabecera__enlace">Contacto</a>
         </nav>
     </header>
-    <main class="main presentation-layout">
-        <section class="hero">
-            <div class="hero__left">
-                <h1 class="hero__title">Cultivos</h1>
-                <p class="hero__subtitle">54 Diapositivas</p>
-                <p class="hero__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+    <main class="principal presentacion">
+        <section class="hero-sec">
+            <div class="hero-sec__izq">
+                <h1 class="hero-sec__titulo">Cultivos</h1>
+                <p class="hero-sec__subtitulo">54 Diapositivas</p>
+                <p class="hero-sec__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                     Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
                     irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -31,64 +31,64 @@
                     sunt in culpa qui officia deserunt mollit anim id est laborum. 1
                 </p>
             </div>
-            <div class="hero__right">
-                <img src="/Lembo/imagenes proyecto/Buenas-practicas-del-cafe.jpg" alt="Imagen de Cultivos" class="hero__image">
+            <div class="hero-sec__der">
+                <img src="/Lembo/imagenes proyecto/Buenas-practicas-del-cafe.jpg" alt="Imagen de Cultivos" class="hero-sec__img">
             </div>
         </section>
-        <section class="styles-section">
-            <div class="styles-section__grid">
-                <div class="style-card style-card--infographic">
-                    <h2 class="style-card__title">Infographic Style</h2>
-                    <div class="infographic-content">
-                        <div class="infographic-content__left">
-                            <p class="infographic-content__text">Contenido Aquí</p>
-                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="infographic-content__image">
-                            <p class="infographic-content__label">Local Food Advantages</p>
+        <section class="estilos">
+            <div class="estilos__grid">
+                <div class="tarjeta estilo-info">
+                    <h2 class="tarjeta__titulo">Estilo Infografía</h2>
+                    <div class="info-contenido">
+                        <div class="info-contenido__izq">
+                            <p class="info-contenido__texto">Contenido Aquí</p>
+                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="info-contenido__img">
+                            <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
                         </div>
-                        <div class="infographic-content__right">
-                            <p class="infographic-content__yield-title">Global Yield Advantages</p>
-                            <p class="infographic-content__yield-text">Información sobre ventajas globales de la cosecha.</p>
-                            <p class="infographic-content__text">Contenido Aquí</p>
-                        </div>
-                    </div>
-                    <div class="style-card__image-container">
-                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Infographic Style" class="style-card__image">
-                    </div>
-                </div>
-                <div class="style-card style-card--infographic">
-                    <h2 class="style-card__title">Infographic Style</h2>
-                    <div class="infographic-content">
-                        <div class="infographic-content__left">
-                            <p class="infographic-content__text">Contenido Aquí</p>
-                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="infographic-content__image">
-                            <p class="infographic-content__label">Local Food Advantages</p>
-                        </div>
-                        <div class="infographic-content__right">
-                            <p class="infographic-content__yield-title">Global Yield Advantages</p>
-                            <p class="infographic-content__yield-text">Información sobre ventajas globales de la cosecha.</p>
-                            <p class="infographic-content__text">Contenido Aquí</p>
+                        <div class="info-contenido__der">
+                            <p class="info-contenido__titulo-cosecha">Ventajas Cosecha Global</p>
+                            <p class="info-contenido__texto-cosecha">Información sobre ventajas globales de la cosecha.</p>
+                            <p class="info-contenido__texto">Contenido Aquí</p>
                         </div>
                     </div>
-                    <div class="style-card__image-container">
-                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Infographic Style" class="style-card__image">
+                    <div class="tarjeta__contenedor-img">
+                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Estilo Infografía" class="tarjeta__img">
                     </div>
                 </div>
-                <div class="style-card style-card--infographic">
-                    <h2 class="style-card__title">Infographic Style</h2>
-                    <div class="infographic-content">
-                        <div class="infographic-content__left">
-                            <p class="infographic-content__text">Contenido Aquí</p>
-                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="infographic-content__image">
-                            <p class="infographic-content__label">Local Food Advantages</p>
+                <div class="tarjeta estilo-info">
+                    <h2 class="tarjeta__titulo">Estilo Infografía</h2>
+                    <div class="info-contenido">
+                        <div class="info-contenido__izq">
+                            <p class="info-contenido__texto">Contenido Aquí</p>
+                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="info-contenido__img">
+                            <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
                         </div>
-                        <div class="infographic-content__right">
-                            <p class="infographic-content__yield-title">Global Yield Advantages</p>
-                            <p class="infographic-content__yield-text">Información sobre ventajas globales de la cosecha.</p>
-                            <p class="infographic-content__text">Contenido Aquí</p>
+                        <div class="info-contenido__der">
+                            <p class="info-contenido__titulo-cosecha">Ventajas Cosecha Global</p>
+                            <p class="info-contenido__texto-cosecha">Información sobre ventajas globales de la cosecha.</p>
+                            <p class="info-contenido__texto">Contenido Aquí</p>
                         </div>
                     </div>
-                    <div class="style-card__image-container">
-                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Infographic Style" class="style-card__image">
+                    <div class="tarjeta__contenedor-img">
+                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Estilo Infografía" class="tarjeta__img">
+                    </div>
+                </div>
+                <div class="tarjeta estilo-info">
+                    <h2 class="tarjeta__titulo">Estilo Infografía</h2>
+                    <div class="info-contenido">
+                        <div class="info-contenido__izq">
+                            <p class="info-contenido__texto">Contenido Aquí</p>
+                            <img src="/Lembo/imagenes proyecto/cultivo22.webp" alt="Planta" class="info-contenido__img">
+                            <p class="info-contenido__etiqueta">Ventajas Comida Local</p>
+                        </div>
+                        <div class="info-contenido__der">
+                            <p class="info-contenido__titulo-cosecha">Ventajas Cosecha Global</p>
+                            <p class="info-contenido__texto-cosecha">Información sobre ventajas globales de la cosecha.</p>
+                            <p class="info-contenido__texto">Contenido Aquí</p>
+                        </div>
+                    </div>
+                    <div class="tarjeta__contenedor-img">
+                        <img src="/Lembo/imagenes proyecto/cultivos-1.jpg" alt="Estilo Infografía" class="tarjeta__img">
                     </div>
                 </div>
             </div>
