--- a/Lembo/Homes/INDEX/actualizar.html
+++ b/Lembo/Homes/INDEX/actualizar.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Presentación de Cultivos</title>
-    <link rel="stylesheet" href="/Lembo/Homes/CSS/styleprac.css">
+    <title>Tu Página Principal</title>
+    <link rel="stylesheet" href="/Lembo/Homes/CSS/actualizar.css">
 </head>
 <body class="pagina">
     <header class="cabecera">
@@ -19,22 +19,18 @@
         </nav>
     </header>
     <main class="principal presentacion">
-        <section class="hero-sec">
-            <div class="hero-sec__izq">
-                <h1 class="hero-sec__titulo">Cultivos</h1>
-                <p class="hero-sec__subtitulo">54 Diapositivas</p>
-                <p class="hero-sec__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident,
-                    sunt in culpa qui officia deserunt mollit anim id est laborum. 1
+        <a href="index2.html" class="actualizar-cultivo-link">
+            <section class="actualizar-cultivo-container">
+                <h2 class="actualizar-cultivo-title">Actualizar Asociación de Cultivo</h2>
+                <p class="actualizar-cultivo-description">
+                    El sistema permite al ADMIN actualizar los ciclos de cultivos creados en el RF-ADMIN 22.
                 </p>
-            </div>
-            <div class="hero-sec__der">
-                <img src="/Lembo/imagenes proyecto/Buenas-practicas-del-cafe.jpg" alt="Imagen de Cultivos" class="hero-sec__img">
-            </div>
-        </section>
+                <p class="actualizar-cultivo-requirement">
+                    Para realizar este proceso se debe tener el ID del cultivo.
+                </p>
+            </section>
+        </a>
+
         <section class="estilos">
             <div class="estilos__grid">
                 <div class="tarjeta estilo-info">
