--- a/Lembo/vizualisar/html/practica.html
+++ b/Lembo/vizualisar/html/practica.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presentación de Cultivos</title>
-    <link rel="stylesheet" href="/Lembo/Homes/CSS/styleprac.css">
+    <link rel="stylesheet" href="/Lembo/vizualisar/css/styleprac.css">
 </head>
 <body class="pagina">
     <header class="cabecera">
@@ -13,9 +13,12 @@
         </div>
         <nav class="cabecera__nav">
             <a href="#" class="cabecera__enlace">Inicio</a>
-            <a href="#" class="cabecera__enlace">Actualizar</a>
-            <a href="#" class="cabecera__enlace">Actualizar</a>
-            <a href="#" class="cabecera__enlace">Contacto</a>
+            <a href="crear_asociacion.html" class="cabecera__enlace">Crear Asociación</a>
+            <a href="visualizar_asociacion.html" class="cabecera__enlace">Visualizar </a>
+            <a href="actualizar_asociacion.html" class="cabecera__enlace">Actualizar </a>
+            <a href="habilitar_deshabilitar.html" class="cabecera__enlace">Habilitar/Deshabilitar</a>
+            <a href="listar_asociaciones.html" class="cabecera__enlace">Listar Asociaciones</a>
+            <a href="generar_reporte.html" class="cabecera__enlace">Generar Reporte</a>
         </nav>
     </header>
     <main class="principal presentacion">
